# bearconsole

./: .gitignore  README.md  app.py  pyproject.toml  terminal_app.py
board/: board_generic.py
games/: dot_and_boxes.py  extras.py  hangman.py  tictactoe.py
menu/: generic_menu.py
src/bearconsole/board/: board_generic.py
src/bearconsole/games/: dot_and_boxes.py  extras.py  hangman.py  tictactoe.py
src/bearconsole/menu/: generic_menu.py
src/bearconsole/ui/: hangman_ui.py  resources.qrc  tictactoe_ui.py
tests/unit/: test_hangman.py
ui/: game_console_ui.py  hangman_ui.py  resources.py  resources.qrc  tictactoe_ui.py
